--- a/src/index.html
+++ b/src/index.html
@@ -1,30 +1,32 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <title>Adminpro</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Favicon icon -->
-  <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon.png">
-  <!-- Bootstrap Core CSS -->
-  <link href="./assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Custom CSS -->
-  <link href="./assets/css/style.css" rel="stylesheet">
-  <!-- You can change the theme colors from here -->
-  <link href="./assets/css/colors/default-dark.css" id="theme" rel="stylesheet">
+    <meta charset="utf-8">
+    <title>Adminpro</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Favicon icon -->
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon.png">
+    <!-- Bootstrap Core CSS -->
+    <link href="./assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link href="./assets/css/style.css" rel="stylesheet">
+    <!-- You can change the theme colors from here -->
+    <link id="theme" rel="stylesheet">
 </head>
+
 <body class="fix-header card-no-border fix-sidebar">
-  <!-- Preloader - style you can find in spinners.css -->
+    <!-- Preloader - style you can find in spinners.css -->
     <!-- ============================================================== -->
     <div class="preloader">
-      <div class="loader">
-          <div class="loader__figure"></div>
-          <p class="loader__label">Admin Pro</p>
-      </div>
+        <div class="loader">
+            <div class="loader__figure"></div>
+            <p class="loader__label">Admin Pro</p>
+        </div>
     </div>
-  <app-root></app-root>
-  <!-- All Jquery -->
+    <app-root></app-root>
+    <!-- All Jquery -->
     <!-- ============================================================== -->
     <script src="./assets/plugins/jquery/jquery.min.js"></script>
     <!-- Bootstrap tether Core JavaScript -->
@@ -42,8 +44,7 @@
     <!--Custom JavaScript -->
     <script src="./assets/js/custom.min.js"></script>
     <!-- ============================================================== -->
-    <!-- Style switcher -->
-    <!-- ============================================================== -->
-    <script src="../assets/plugins/styleswitcher/jQuery.style.switcher.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 </body>
+
 </html>
